# Fundamentals-Of-Robotics

./: .gitignore  README.md  Readmd.md
cpp/control/mpc/: CMakeLists.txt  readme.md
cpp/control/mpc/include/: dynamic_model.hpp  mpc_driver.hpp
cpp/control/mpc/src/: main.cpp
cpp/umich_rob530/homework-07/: CMakeLists.txt  plot.py  readme.md
cpp/umich_rob530/homework-07/include/: custom_graph_helper.hpp  data_handler.hpp
cpp/umich_rob530/homework-07/src/: custom_graph_helper.cpp  data_handler.cpp  main.cpp
python/umich/: Readme.md
python/umich/homework-01/: task2c_python.ipynb
python/umich/homework-02/hw2-code/: task4_python.ipynb
python/umich/homework-03/: EKF.ipynb  PF.ipynb  ekf.py  pf.py
python/umich/homework-04/: RIEKF.ipynb  readme.md
python/umich_rob530/: Readme.md
python/umich_rob530/homework-02/hw2-code/: task5_python.ipynb
python/umich_rob530/homework-03/: compare_ekf_vs_pf.ipynb  data_handler.py
python/umich_rob530/homework-04/: RIEKF.ipynb
python/umich_rob530/homework-05/HW5_codes_python/config/: settings.yaml
python/umich_rob530/homework-05/HW5_codes_python/filter/: EKF.py
